need to try on debian

--- a/files/airflow.cfg
+++ b/files/airflow.cfg
@@ -1,15 +1,20 @@
 [core]
-airflow_home    = /home/centos/airflow
-dags_folder     = /home/centos/airflow/dags
-base_log_folder = /home/centos/airflow/logs
+#airflow_home   = /home/admin/airflow
+ #Specifying both AIRFLOW_HOME environment variable and airflow_home in the config file is deprecated.
+ # Please use only the AIRFLOW_HOME environment variable and remove the config file entry.
+dags_folder     = /home/admin/airflow/dags
+base_log_folder = /home/admin/airflow/logs
 
-logging_level     = INFO
-log_format        = [%%(asctime)s] {%%(filename)s:%%(lineno)d} %%(levelname)s - %%(message)s
-simple_log_format = %%(asctime)s %%(levelname)s - %%(message)s
+#logging_level     = INFO
+#log_format        = [%%(asctime)s] {%%(filename)s:%%(lineno)d} %%(levelname)s - %%(message)s
+#simple_log_format = %%(asctime)s %%(levelname)s - %%(message)s
 
 executor = LocalExecutor
 
 sql_alchemy_conn = postgresql+psycopg2://airflow:${db_pass}@${db_url}:5432/airflow
+# The sql_alchemy_conn option in [core] has been moved to the sql_alchemy_conn option in [database] 
+#- the old setting has been used, but please update your config.
+
 
 sql_alchemy_pool_size = 5
 sql_alchemy_pool_recycle = 3600
@@ -21,7 +26,7 @@ max_active_runs_per_dag = 16
 
 load_examples = False
 
-plugins_folder = /home/centos/airflow/plugins
+plugins_folder = /home/admin/airflow/plugins
 
 fernet_key = ${fernet_key}
 
@@ -31,7 +36,11 @@ task_runner = BashTaskRunner
 
 unit_test_mode = False
 
-task_log_reader = file.task
+#task_log_reader = file.task
+# task_log_reader setting in [logging] has a deprecated value of 'file.task', 
+#but no handler with this name was found. 
+#Please update your config to use task. Running config has been adjusted to match
+
 
 enable_xcom_pickling = True
 
@@ -92,6 +101,10 @@ owner_mode = user
 # Default DAG view.  Valid values are:
 # tree, graph, duration, gantt, landing_times
 dag_default_view = tree
+#The 'dag_default_view' setting in [webserver]
+# has the old default value of 'tree'. 
+#This value has been changed to 'grid' in the running config,
+# but please update your config before Apache Airflow 3.0.
 
 # Default DAG orientation. Valid values are:
 # LR (Left->Right), TB (Top->Bottom), RL (Right->Left), BT (Bottom->Top)
@@ -144,7 +157,7 @@ dag_dir_list_interval = 300
 # How often should stats be printed to the logs
 print_stats_interval = 30
 
-child_process_log_directory = /home/centos/airflow/logs/scheduler
+child_process_log_directory = /home/admin/airflow/logs/scheduler
 
 # Local task jobs periodically heartbeat to the DB. If the job has
 # not heartbeat in this many seconds, the scheduler will mark the
@@ -173,3 +186,17 @@ authenticate = False
 [admin]
 # UI to hide sensitive variable fields when set to True
 hide_sensitive_variable_fields = True
+#The hide_sensitive_variable_fields option in [admin] has been moved to the hide_sensitive_var_conn_fields option in [core] - 
+# -the old setting has been used, but please update your config.
+
+
+
+
+
+#The auth_backend option in [api] has been renamed to auth_backends - the old setting has been used, but please update your config.
+# The auth_backend option in [api] has been renamed to auth_backends - the old setting has been used, but please update your config.
+#The sql_alchemy_conn option in [core] has been moved to the sql_alchemy_conn option in [database] - the old setting has been used, but please update your config.
+# The sql_alchemy_conn option in [core] has been moved to the sql_alchemy_conn option in [database] - the old setting has been used, but please update your config.
+#The base_log_folder option in [core] has been moved to the base_log_folder option in [logging] - the old setting has been used, but please update your config.
+# The task_log_reader option in [core] has been moved to the task_log_reader option in [logging] - the old setting has been used, but please update your config.
+# task_log_reader setting in [logging] has a deprecated value of 'file.task', but no handler with this name was found. Please update your config to use task. Running config has been adjusted to match
